--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,13 @@ pr:
 
 resources:
   repositories:
-    - repository: templates
+    - repository: obtemplates
       type: git
       name: OneBranch.Pipelines/GovernedTemplates
       ref: refs/heads/main
 
 extends:
-  template: v2/OneBranch.NonOfficial.CrossPlat.yml@templates
+  template: v2/OneBranch.NonOfficial.CrossPlat.yml@obtemplates
   parameters:
     featureFlags:
     globalSdl:
