--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,10 @@ pr:
 
 resources:
   repositories:
+    - repository: ProcDump
+      type: github
+      endpoint: sysinternals
+      name: Microsoft/ProcDump-for-Linux
     - repository: obtemplates
       type: git
       name: OneBranch.Pipelines/GovernedTemplates
@@ -52,7 +56,7 @@ extends:
               gcc --version
             displayName: 'List compiler versions'
 
-          #- template: templates/build.yaml
+          - template: templates/build.yaml@ProcDump
 
           - script: |
               cd procdump_build/tests/integration
@@ -104,7 +108,7 @@ extends:
               gcc --version
             displayName: 'List compiler versions'
 
-          #- template: templates/build.yaml
+          - template: templates/build.yamlProcDump
 
           - script: |
               cd procdump_build/tests/integration
@@ -146,7 +150,7 @@ extends:
               sw_vers
             displayName: 'Diagnostics'
 
-          #- template: templates/build.yaml
+          - template: templates/build.yamlProcDump
 
           - script: |
               cd procdump_build/tests/integration
