update template repo name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,7 +108,7 @@ extends:
               gcc --version
             displayName: 'List compiler versions'
 
-          - template: templates/build.yamlProcDump
+          - template: templates/build.yaml@ProcDump
 
           - script: |
               cd procdump_build/tests/integration
@@ -150,7 +150,7 @@ extends:
               sw_vers
             displayName: 'Diagnostics'
 
-          - template: templates/build.yamlProcDump
+          - template: templates/build.yaml@ProcDump
 
           - script: |
               cd procdump_build/tests/integration
