--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ extends:
             displayName: 'Enable syslog'
 
           - script: |
-              DEBIAN_FRONTEND=noninteractive apt -y update && apt install sudo -y
+              DEBIAN_FRONTEND=noninteractive apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" sudo
               chmod +x .devcontainer/install-ubuntu-dependencies.sh
               .devcontainer/install-ubuntu-dependencies.sh
             displayName: "Install pre-reqs for Ubuntu"
@@ -99,7 +99,7 @@ extends:
             displayName: 'Enable syslog'
 
           - script: |
-              DEBIAN_FRONTEND=noninteractive apt -y update && apt install sudo -y
+              DEBIAN_FRONTEND=noninteractive apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" sudo
               chmod +x .devcontainer/install-ubuntu-dependencies.sh
               .devcontainer/install-ubuntu-dependencies.sh
             displayName: "Install pre-reqs for Ubuntu"
