--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,8 +242,17 @@ if(NOT APPLE AND CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
 endif()
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-  add_dependencies(procdump libbpf procdump_ebpf)
-  target_link_libraries(procdump ${libbpf_SOURCE_DIR}/src/libbpf.a elf z pthread)
+  add_dependencies(procdump procdump_ebpf)
+
+  list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+  find_package(Threads REQUIRED)
+  find_package(ZLIB REQUIRED)
+  find_package(Libelf REQUIRED)
+  target_link_libraries(procdump
+         Libelf::Libelf
+         ZLIB::ZLIB
+         Threads::Threads
+  )
 else()
   target_link_libraries(procdump z pthread)
 endif()
