--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,8 @@ extends:
           - template: templates/build.yaml@ProcDump
 
           - script: |
-              ss -tulnp | grep 5032
+              apt install -y iproute2
+              echo "Check port 5032" && ss -tulnp | grep 5032
               cd procdump_build/tests/integration
               ./run.sh
             displayName: 'Run unit tests'
