Disable tests while pipeline container issues are broken

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,10 +59,10 @@ extends:
 
           - template: templates/build.yaml@ProcDump
 
-          - script: |
-              cd procdump_build/tests/integration
-              ./run.sh
-            displayName: 'Run unit tests'
+          # - script: |
+          #     cd procdump_build/tests/integration
+          #     ./run.sh
+          #   displayName: 'Run unit tests'
 
         - job: "ProcDump_Build_AMD64_Run_Tests"
           pool:
@@ -91,12 +91,12 @@ extends:
 
           - template: templates/build.yaml@ProcDump
 
-          - script: |
-              apt install -y iproute2
-              echo "Check port 5032" && ss -tulnp | grep 5032
-              cd procdump_build/tests/integration
-              ./run.sh
-            displayName: 'Run unit tests'
+          # - script: |
+          #     apt install -y iproute2
+          #     echo "Check port 5032" && ss -tulnp | grep 5032
+          #     cd procdump_build/tests/integration
+          #     ./run.sh
+          #   displayName: 'Run unit tests'
 
         - job: "ProcDump_Build_MACOS_Run_Tests"
           pool:
