--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,9 @@ resources:
 extends:
   template: v2/OneBranch.NonOfficial.CrossPlat.yml@obtemplates
   parameters:
+    featureFlags:
+      LinuxHostVersion:
+        Network: KS4
     globalSdl:
       tsa:
         enabled: false
