--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,10 +62,10 @@ extends:
 
           - template: templates/build.yaml@ProcDump
 
-          # - script: |
-          #     cd procdump_build/tests/integration
-          #     ./run.sh
-          #   displayName: 'Run unit tests'
+          - script: |
+              cd procdump_build/tests/integration
+              ./run.sh
+            displayName: 'Run unit tests'
 
         - job: "ProcDump_Build_AMD64_Run_Tests"
           pool:
